--- a/javafx1/bin/gui/View.fxml
+++ b/javafx1/bin/gui/View.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1">
    <children>
       <Button layoutX="168.0" layoutY="137.0" mnemonicParsing="false" text="Button" />
-      <Label layoutX="163.0" layoutY="101.0" text="Clique Here" />
+      <Label layoutX="163.0" layoutY="101.0" text="Click Here" />
    </children>
 </AnchorPane>
